--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://js.stripe.com/v3/"></script>
   <title>Crete your Life</title>
 </head>
 
@@ -17,7 +18,7 @@
   <noscript>
     You need to enable JavaScript to run this app!
   </noscript>
-  <div id="root" />
+  <div id="root"></div>
 </body>
 
 </html>
